build(example): Update native code
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/neon_framework/example/web/index.html
+++ b/packages/neon_framework/example/web/index.html
@@ -106,6 +106,7 @@
             document.body.style.background = "transparent";
         }
     </script>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 </head>
 <body>
 <picture id="splash">
